# battleship

./: .gitignore  AUTHORS  BattleshipBot.cpp  CMakeLists.txt  LICENSE  Makefile  README.md  battleship  bot.cpp  bot_id.hpp  bot_id_collection.cpp  bot_role.cpp  connection.cpp  main.cpp  main.hpp  protocol_utils.hpp  scenario_trigger.cpp  ship.cpp  student.cpp  trigger_scenario.cpp  trigger_scenario.hpp
server/decompiled/: marks_24-algorithm.c  nasty-algorithm.c
src/: .main.cc.swp  battleshipstates.sln  battleshipstates.vcxproj  battleshipstates.vcxproj.filters  bot-master.cpp  bot-master.hpp  bot-zombie.cpp  bot-zombie.hpp  bot.cc  bot.cpp  bot.h  bot.hpp  bot_id.cpp  bot_id_collection.cpp  bot_id_collection.hpp  bot_master.cpp  bot_master.hpp  bot_role.cpp  bot_role.hpp  bot_zombie.cpp  bot_zombie.hpp  command_manager.cc  command_manager.h  connection.cc  connection.cpp  connection.h  connection.hpp  drone_task.cc  drone_task.h  main.c  main.cc  main.cpp  main.h  main.hpp  network_manager.cpp  network_manager.hpp  poison_task.cc  poison_task.h  protocol_utils.cc  protocol_utils.cpp  (+18 more)
src/backup/: vc140.idb
src/backup/battleship.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  battleship.lastbuildstate
